overflow hidden on famous-container broke z translations, so removing that, fixing iphone safari zoom bug with initial-scale=1

--- a/src/app/views/scss/app.scss
+++ b/src/app/views/scss/app.scss
@@ -45,7 +45,3 @@ button {
   background-position: center;
   margin-top: 40px;
 }
-
-.famous-container {
-  overflow: hidden !important;
-}
